--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e git+https://github.com/NobleNetworkCharterSchools/activity-history-conversion.git@47060c9a3e0908274ed211a5da99c4157a1d6f16#egg=activity_history_conversion
+-e git+https://github.com/NobleNetworkCharterSchools/activity-history-conversion.git@34e1a9791f6e9c58daea22e658445e47935116dc#egg=activity_history_conversion
 asn1crypto==0.23.0
 attrs==17.3.0
 certifi==2017.11.5
@@ -8,7 +8,7 @@ cryptography==2.3
 elasticsearch==5.3.0
 fuzzywuzzy==0.15.1
 idna==2.6
--e git+https://github.com/noblenetworkcharterschools/noble-logging-utils.git@10364e0e96c8c2a2ca93cdd51580f6f208a3d2bb#egg=noble_logging_utils
+-e git+https://github.com/noblenetworkcharterschools/noble-logging-utils.git@5624d5dadc594e803a674ae1fdbd71ecd2a999ae#egg=noble_logging_utils
 pluggy==0.6.0
 py==1.5.2
 pycparser==2.18
@@ -21,4 +21,5 @@ rollbar==0.13.17
 -e git+https://github.com/noblenetworkcharterschools/salesforce-utils.git@436c8bfff45ecb6f75f92099d8fa5bf431160dc2#egg=salesforce_utils
 simple-salesforce==0.73.0
 six==1.11.0
+structlog==18.2.0
 urllib3==1.22
